plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.5'
    id 'io.spring.dependency-management' version '1.1.6'
    id "org.sonarqube" version "4.4.1.3373"
    id 'jacoco'
    id 'checkstyle'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

group = 'com.softserve'
version = '1.0.0'

repositories {
    mavenCentral()
}

// ==================== FRONTEND TASKS ====================
task buildFrontend(type: Exec) {
    description = 'Build frontend'
    workingDir = file('frontend')

    if (System.getProperty('os.name').toLowerCase().contains('windows')) {
        commandLine 'cmd', '/c', 'npm run build'
    } else {
        commandLine 'npm', 'run', 'build'
    }
}

task copyFrontendToStatic(type: Copy, dependsOn: buildFrontend) {
    description = 'Copy frontend build to static resources'
    from 'frontend/build'
    into 'src/main/resources/static'
}

task cleanFrontend(type: Delete) {
    delete 'src/main/resources/static'
}

task deployFrontend {
    description = 'Build and deploy frontend'
    dependsOn cleanFrontend, copyFrontendToStatic
    copyFrontendToStatic.mustRunAfter cleanFrontend

    doLast {
        println '✅ Frontend deployed to src/main/resources/static'
    }
}

// ==================== TEST CONFIG ====================
test {
    useJUnitPlatform()
    maxHeapSize = '1G'
    finalizedBy jacocoTestReport
}

// ==================== JACOCO ====================
jacoco {
    toolVersion = "0.8.12"
}

jacocoTestReport {
    dependsOn(test)
    reports {
        xml.required = true
    }
}

jacocoTestCoverageVerification {
    violationRules {
        failOnViolation = true
        rule {
            limit {
                minimum = 0.5
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification

// ==================== SONARQUBE ====================
sonarqube {
    properties {
        property "sonar.projectKey", "nromanen_Schedule"
        property "sonar.organization", "nromanen"
        property "sonar.host.url", "https://sonarcloud.io"
    }
}

// ==================== CHECKSTYLE ====================
checkstyle {
    toolVersion = '10.18.2'
    showViolations = true
}

// ==================== LIQUIBASE ====================
apply from: 'liquibase.gradle'
apply from: "$projectDir/pre-commit.gradle"

// ==================== DEPENDENCIES ====================
dependencies {
    // Spring Boot Starters
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    // Hibernate (без Spring Data JPA)
    implementation 'org.springframework:spring-orm'

    // Hibernate 6.x (керується Spring Boot BOM, але можна вказати явно)
    implementation 'org.hibernate.orm:hibernate-core'
//    implementation 'org.hibernate.orm:hibernate-c3p0'

    // Заміна hibernate-types-52 для Hibernate 6.x
    implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.8.3'

    // Database
    implementation 'org.postgresql:postgresql'
    implementation 'org.liquibase:liquibase-core'

    // Jackson
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml'

    // Swagger / OpenAPI (springdoc 2.x)
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'

    // JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    implementation 'org.redisson:redisson-spring-boot-starter:3.37.0'

    // Lombok & MapStruct
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.6.2'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'
    testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.6.2'

    // Utilities
    implementation 'org.passay:passay:1.6.5'
    implementation 'org.apache.commons:commons-text:1.12.0'
    implementation 'commons-beanutils:commons-beanutils:1.9.4'
    implementation 'org.json:json:20240303'
    implementation 'com.github.java-json-tools:json-schema-validator:2.2.14'
    implementation 'org.xhtmlrenderer:flying-saucer-pdf:10.0.6'
    implementation 'org.jsoup:jsoup:1.18.3'
    implementation 'com.opencsv:opencsv:5.9'

    // commons-fileupload -> commons-fileupload2 для jakarta
    implementation 'org.apache.commons:commons-fileupload2-jakarta-servlet6:2.0.0-M2'
    implementation 'commons-io:commons-io:2.17.0'

    // Source: https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation 'org.apache.poi:poi-ooxml:5.5.1'

    // Testing
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}